# Fract

./: .gitignore  CMakeLists.txt  readme.md  xmake.lua
data/: bxdf.h  camera.h  ray_cast.hlsl  scene.h  test.comp.hlsl
fract_lib/: CMakeLists.txt
fract_lib/materials/: brdf.h
fract_lib/rhi/: barrier.h  command.cpp  command.h  device.cpp  device.h  pipeline.cpp  pipeline.h  resources.cpp  resources.h  rhi_utils.h  stdafx.h
fract_lib/utils/: defination.h
fract_lib/utils/container/: Container.h
fract_lib/utils/log/: log.cpp  log.h
fract_lib/utils/math/: Math.h
fract_lib/utils/memory/: Allocators.cpp  Allocators.h  Memory.cpp  Memory.h
fract_lib/utils/renderdoc/: RenderDoc.cpp  RenderDoc.h
fract_lib/utils/singleton/: public_singleton.h
fract_lib/utils/window/: Window.cpp  Window.h  WindowInput.cpp  WindowInput.h
fract_render/: CMakeLists.txt  fract_render.cpp
ori/: CMakeLists.txt
ori/rhi/: device.cpp  device.h  rhi_utils.h  stdafx.h
ori/utils/: defination.h
ori/utils/container/: Container.h
ori/utils/log/: log.cpp  log.h
ori/utils/math/: Math.h
ori/utils/memory/: Allocators.cpp  Allocators.h  Memory.cpp  Memory.h
ori/utils/singleton/: public_singleton.h
ori/utils/window/: Window.cpp  Window.h  WindowInput.cpp  WindowInput.h
ori_render/: CMakeLists.txt  ori_render.cpp
